<resources>
    <string name="app_name">SampleProfileUi</string>
    <string name="weekly_goal">Weekly Goal</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="my_desc">Doing at the sweet spot between aesthetics and elegance to give life to your brand.My opinion belong to nobody but myself.</string>
    <string name="about_me">About Me</string>
    <string name="information">Information</string>
    <string name="skills">Skills</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="date_of_birth_val">1997-12-01</string>
    <string name="sex">Sex</string>
    <string name="sex_val">Male</string>
    <string name="age">Age</string>
    <string name="age_val">24</string>
    <string name="blood_type">Blood Type</string>
    <string name="blood_type_val">Type O</string>
    <string name="weight">Weight</string>
    <string name="weight_val">50kg</string>
    <string name="height">Height</string>
    <string name="height_val">165cm</string>
    <string name="body_fat">Body Fat</string>
    <string name="body_fat_val">26</string>
    <string name="role">Begineer</string>
    <string name="calories">Calories</string>
    <string name="calories_val">2200cal</string>
    <string name="time">Time</string>
    <string name="time_val">2hrs</string>
    <string name="distance">Distance</string>
    <string name="distance_val">2km</string>
    <string name="goals">Weekly Activity Goals</string>
    <string name="samplereview">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium bibendum sapien, ut euismod massa. Duis convallis sem sed turpis elementum auctor.</string>
</resources>
