<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@color/lightPrimary" />

    <!--Top Header Layout-->
    <LinearLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:padding="16dp">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dashboard"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topbar"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp">

            <!--Top Profile Section -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/circularbordersolid"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="90dp"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="0dp">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="90dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/pp" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/proximanovaregular"
                        android:text="William S."
                        android:textColor="#424242"
                        android:textSize="21sp"
                        android:textStyle="bold" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:background="@drawable/circular_grey_bordersolid"
                            android:padding="10dp"
                            android:src="@drawable/tickinsidecircle" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="97%"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:text="@string/weekly_goal"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:background="@drawable/circular_grey_bordersolid"
                            android:padding="10dp"
                            android:src="@drawable/star" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="116/120hrs"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:text="@string/role"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <!--Option Bar-->

            <!--Bootom Cards with sections-->
            <LinearLayout
                android:id="@+id/personalinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--About Me Card-->

                <!--Contact Details-->

                <!--Skills Details-->
                <LinearLayout
                    android:id="@+id/personalinfo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <!--About Me Card-->

                    <!--Contact Details-->

                    <!--Skills Details-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/circularbordersolid_grey"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Last Week Activity"
                                android:textColor="@color/white"
                                android:textSize="17sp"
                                android:textStyle="bold" />

                            <Space
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="5dp"
                                android:background="@drawable/bottom_select"
                                android:drawableBottom="@android:color/white"
                                android:gravity="center_vertical"
                                android:paddingRight="8dp">

                                <ImageView
                                    android:layout_width="20dp"
                                    android:layout_height="50dp"
                                    android:background="@color/lightPrimary"
                                    android:padding="5dp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="20dp"
                                    android:fontFamily="@font/proximanovaregular"
                                    android:text="@string/calories"
                                    android:textColor="@color/white"
                                    android:textSize="15sp" />

                                <TextView
                                    android:id="@+id/calorie_edit"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="90dp"
                                    android:fontFamily="@font/proximanovaregular"
                                    android:text="@string/calories_val"
                                    android:textColor="@color/lightPrimarySub"
                                    android:textSize="15sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="5dp"
                                android:background="@drawable/bottom_select"
                                android:drawableBottom="@android:color/white"
                                android:gravity="center_vertical"
                                android:paddingRight="8dp">

                                <ImageView
                                    android:layout_width="20dp"
                                    android:layout_height="50dp"
                                    android:background="@color/lightPrimary"
                                    android:padding="5dp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="20dp"
                                    android:fontFamily="@font/proximanovaregular"
                                    android:text="@string/time"
                                    android:textColor="@color/white"
                                    android:textSize="15sp" />

                                <TextView
                                    android:id="@+id/time_edit"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="110dp"
                                    android:fontFamily="@font/proximanovaregular"
                                    android:text="400min"
                                    android:textColor="@color/lightPrimarySub"
                                    android:textSize="15sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="2dp"
                                android:background="@color/lightPrimary"
                                android:gravity="center_vertical"
                                android:paddingRight="8dp">

                                <ImageView
                                    android:layout_width="20dp"
                                    android:layout_height="50dp"
                                    android:background="@color/lightPrimary"
                                    android:padding="5dp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="28dp"
                                    android:layout_marginLeft="20dp"
                                    android:fontFamily="@font/proximanovaregular"
                                    android:text="Recent Activities"
                                    android:textColor="@color/white"
                                    android:textSize="15sp" />

                                <TextView
                                    android:id="@+id/distance_edit"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="30dp"
                                    android:fontFamily="@font/proximanovaregular"
                                    android:text="Biking;Running;Rowing"
                                    android:textColor="@color/lightPrimarySub"
                                    android:textSize="15sp" />
                            </LinearLayout>

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/button_act"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Activity" />

                <Button
                    android:id="@+id/button_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="setting" />

            </LinearLayout>

            <!--Experience Bottom Cards-->

        </LinearLayout>


    </ScrollView>


</RelativeLayout>